# air-cook1

./: .gitignore  CMakeLists.txt  ESP32-S3-接口文档.md  captured_audio.pcm  partitions.csv  sdkconfig.defaults  云服务器接口文档.md
components/AUDIO_ES/: CMakeLists.txt  audio_board.c  audio_board.h
components/NTC_ADC/: CMakeLists.txt  NTC_ADC.c  NTC_ADC.h
components/SPI_LCD_TOUCH/: CMakeLists.txt  LCD.c  LCD.h  LCD_SHOW.c  app_events.h
components/UI_CON/: CMakeLists.txt  my_font.c  ui_con.c  ui_con.h
components/V220_CON/: CMakeLists.txt  V220_CON.c  V220_CON.h
components/WIFI/: CMakeLists.txt  WIFI.c  WIFI.h
components/audio_board/: CMakeLists.txt
components/audio_board/custom_board/: board.c  board.h  board_def.h  board_pins_config.c
components/common/: CMakeLists.txt  app_events.h
components/use_audio/: CMakeLists.txt  dingdong.raw  my_audio.c  my_audio.h  ws_audio.c
main/: CMakeLists.txt  Server_test03.py  app_task.c  idf_component.yml  main.c  udp_receiver.py
